--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -355,6 +355,35 @@
 	\egroup
 \end{center}
 
+\subsection{Cryptage}
+
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5.5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		CrypC.1 & 3.1.3.1.2 & Faire un clic droit sur un fichier. & Le menu de gestion de fichier apparait avec le bouton "Cryptage du fichier" à l'intérieur. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypC.1.1 & 3.1.3.1.1 3.1.3.1.3 3.1.3.1.4 & Cliquer sur le bouton "Cryptage du fichier". & Le fichier est crypté et illisible pour les utilisateurs ne connaissant pas la clé de cryptage. & \\
+		\hline
+		CrypC.2 & 3.1.3.1.5 3.1.3.1.6 & Télécharger un fichier crypté dont la clé de cryptage est enregistrée. & Le fichier décrypté est téléchargé. & \\
+		\hline
+		CrypC.3 & 3.1.3.1.7 & Télécharger un fichier crypté dont la clé de cryptage n'est pas enregistrée. & Une boite de dialogue s'affiche avec un champ de saisie "Clé". & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypC.3.1 & 3.1.3.1.8 & Entrer la clé de cryptage dans le champ. & Le fichier décrypté est téléchargé. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypC.3.1.1 & 3.1.3.1.9 & Recommencer le téléchargement. & Le fichier décrypté est téléchargé sans redemander la clé de cryptage. & \\
+		\hline
+		\rowcolor{red}CrypC.4 & 3.1.3.1.10 & & & \\
+		\hline
+		\rowcolor{red}CrypC.5 & 3.1.3.1.11 & & & \\
+		\hline	
+	\end{tabular}
+	\egroup
+\end{center}
+
 
 
 
