ajout tests module stats client complets

--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -329,28 +329,38 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		MdstC.1 & 3.1.1.7.2.1 3.1.1.7.2.2 3.1.1.7.2.3 & Ouvrir le module de statistique. & Une partie textuelle apparait dans la partie haute de la fenêtre et une partie graphique dans la partie basse. & \\
+		MdstC.1 & 3.1.3.3.1.1 & Ouvrir le logiciel et se connecter. & Un bouton "Statistiques" est présent dans la barre d'outil. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MdstC.1.1 & 3.1.1.7.1.2 3.1.1.7.2.1 3.1.1.7.2.2 3.1.1.7.2.3 3.1.3.3.1.2 3.1.3.3.1.3 & Cliquer sur le bouton statistique. & Une nouvelle fenêtre apparait avec une partie textuelle dans la moitié haute et une partie graphique dans la moitié basse. & \\
 		\cline{1-2}\cline{4-5}
-		MdstC.1.1 & 3.1.1.7.1.2.1 3.1.1.7.2.4 & & Le nom du fichier de l'utilisateur le plus téléchargé apparait dans la partie textuelle. & \\
+		MdstC.1.1.1 & 3.1.1.7.1.2.1 3.1.1.7.2.4 & & Le nom du fichier de l'utilisateur le plus téléchargé apparait dans la partie textuelle. & \\
 		\cline{1-2}\cline{4-5}
-		MdstC.1.2 & 3.1.1.7.1.2.2 3.1.1.7.2.5 & & L'identifiant de la personne qui a téléchargé le plus de fichier de l'utilisateur apparait dans la partie textuelle. & \\
+		MdstC.1.1.2 & 3.1.1.7.1.2.2 3.1.1.7.2.5 & & L'identifiant de la personne qui a téléchargé le plus de fichier de l'utilisateur apparait dans la partie textuelle. & \\
 		\cline{1-2}\cline{4-5}
-		MdstC.1.3 & 3.1.1.7.1.1 3.1.1.7.1.2.3 3.1.1.7.2.6 & & Un histogramme représentant le nombre de téléchargement de chaque fichier apparait dans la partie graphique. & \\
+		MdstC.1.1.3 & 3.1.1.7.1.1 3.1.1.7.1.2.3 3.1.1.7.2.6 & & Un histogramme représentant le nombre de téléchargement de chaque fichier apparait dans la partie graphique. & \\
 		\cline{1-2}\cline{4-5}
-		MdstC.1.3.1 & 3.1.1.7.2.7 3.1.1.7.2.8 3.1.1.7.2.9 & & Une barre s'affiche dans l'histogramme pour chaque fichier de l'utilisateur. & \\
+		MdstC.1.1.3.1 & 3.1.1.7.2.7 3.1.1.7.2.8 3.1.1.7.2.9 & & Une barre s'affiche dans l'histogramme pour chaque fichier de l'utilisateur. & \\
 		\cline{1-2}\cline{4-5}
-		MdstC.1.3.2 & 3.1.1.7.2.10 & & Chaque barre possède une couleur différente. & \\
+		MdstC.1.1.3.2 & 3.1.1.7.2.10 & & Chaque barre possède une couleur différente. & \\
 		\cline{1-2}\cline{4-5}
-		MdstC.1.3.3 & 3.1.1.7.2.11 & & La hauteur des barres correspond au nombre de téléchargement de chaque fichier. & \\
+		MdstC.1.1.3.3 & 3.1.1.7.2.11 & & La hauteur des barres correspond au nombre de téléchargement de chaque fichier. & \\
 		\cline{1-2}\cline{4-5}
-		MdstC.1.3.4 & 3.1.1.7.2.12 & & La largeur des barres est adaptée pour que l'histogramme prenne entièrement la largeur de la page. & \\
+		MdstC.1.1.3.4 & 3.1.1.7.2.12 & & La largeur des barres est adaptée pour que l'histogramme prenne entièrement la largeur de la page. & \\
 		\cline{1-2}\cline{4-5}
-		MdstC.1.3.5 & 3.1.1.7.2.13 & & En ordonnée le nombre de fichier est affiché. & \\
+		MdstC.1.1.3.5 & 3.1.1.7.2.13 & & En ordonnée le nombre de fichier est affiché. & \\
 		\cline{1-2}\cline{4-5}
-		MdstC.1.3.6 & 3.1.1.7.2.14 & & En abscisse un nombre est affiché sous chacune des barres. & \\
+		MdstC.1.1.3.6 & 3.1.1.7.2.14 & & En abscisse un nombre est affiché sous chacune des barres. & \\
 		\cline{1-2}\cline{4-5}
-		MdstC.1.3.6.1 & 3.1.1.7.2.15 & & Une légende est affichée avec la correspondance numéro de barre/nom du fichier. & \\
-		\hline	
+		MdstC.1.1.3.6.1 & 3.1.1.7.2.15 & & Une légende est affichée avec la correspondance numéro de barre/nom du fichier. & \\
+		\cline{1-2}\cline{4-5}
+		MdstC.1.2 & 3.1.3.3.1.4 & & Le titre "Statistiques" apparait en haut de la fenêtre. & \\
+		\cline{1-2}\cline{4-5}
+		MdstC.1.3 & 3.1.3.3.1.5 3.1.3.3.1.6 3.1.3.3.1.8 & & Une barre d'outil apparait en haut de la fenêtre avec un bouton "Exporter" à gauche. Un bouton "Fermer" apparait en bas à droite. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MdstC.1.3.1 & 3.1.3.3.1.7 & Cliquer sur le bouton "Exporter". & Un fichier html est crée et contient le rapport des statistiques de l'utilisateur. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MdstC.1.3.2 & 3.1.3.3.1.8 & Cliquer sur le bouton "Fermer". & La fenêtre se ferme. & \\
+		\hline
 	\end{tabular}
 	\egroup
 \end{center}
