Ajout structure doc

--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -736,4 +736,106 @@
 	\egroup
 \end{center}
 
+\subsection{Communication réseau}
+
+\subsubsection{Procédure d’initialisation de la communication}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		PicoS.1 & & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsubsection{Download et Upload}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		DoupS.1 & & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsubsection{Module de statistique}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		MostS.1 & & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsubsection{Fichier d’historique des événements}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		FhevS.1 & & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\section{Tests commun aux deux côtés}
+
+\subsection{Cryptage}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		CrypB.1 & & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsection{Communication réseau}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		CoreB.1 & & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsection{Module statistique}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		MostB.1 & & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
 \end{document}
