Fin ajout de structure

--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -746,7 +746,11 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		PicoS.1 & & & & \\
+		PicoS.1 & 3.1.2.9.1.1 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		PicoS.2 & 3.1.2.9.1.2 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		PicoS.3 & 3.1.2.9.1.3 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -760,7 +764,7 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		DoupS.1 & & & & \\
+		DoupS.1 & 3.1.2.10.1 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -774,7 +778,23 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		MostS.1 & & & & \\
+		MostS.1 & 3.1.2.11.1.1 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.2 & 3.1.2.11.1.2 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.3 & 3.1.2.11.1.3 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.4 & 3.1.2.11.1.4 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.5 & 3.1.2.11.1.5 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.6 & 3.1.2.11.1.6 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.7 & 3.1.2.11.1.7 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.8 & 3.1.2.11.1.8 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.9 & 3.1.2.11.1.9 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -788,7 +808,13 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		FhevS.1 & & & & \\
+		FhevS.1 & 3.1.2.12.1.1 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		FhevS.2 & 3.1.2.12.1.2 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		FhevS.3 & 3.1.2.12.1.3 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		FhevS.4 & 3.1.2.12.1.4 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -804,7 +830,27 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		CrypB.1 & & & & \\
+		CrypB.1 & 3.1.3.1.1 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.2 & 3.1.3.1.2 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.3 & 3.1.3.1.3 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.4 & 3.1.3.1.4 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.5 & 3.1.3.1.5 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.6 & 3.1.3.1.6 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.7 & 3.1.3.1.7 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.8 & 3.1.3.1.8 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.9 & 3.1.3.1.9 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.10 & 3.1.3.1.10 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.11 & 3.1.3.1.11 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
