--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -602,9 +602,9 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		ConS.1 & 3.1.2.6.6.1 & Ouvrir le dossier contenant les comptes normaux & Vérifier que le fichier à bien pour extension .acc & \\
+		ConoS.1 & 3.1.2.6.6.1 & Ouvrir le dossier contenant les comptes normaux & Vérifier que le fichier à bien pour extension .acc & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		ConS.2 & 3.1.2.6.6.2 & Ouvrir le fichier .acc & Les lignes sont de la forme "pseudo@motDePasse:/fichier#/autrefichier" & \\
+		ConoS.2 & 3.1.2.6.6.2 & Ouvrir le fichier .acc & Les lignes sont de la forme "pseudo@motDePasse:/fichier#/autrefichier" & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -618,15 +618,15 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		CotS.1 & 3.1.2.6.7.1 & Ouvrir le dossier contenant les comptes temporaires. & L'extension du fichier est .acctmp & \\
+		CoteS.1 & 3.1.2.6.7.1 & Ouvrir le dossier contenant les comptes temporaires. & L'extension du fichier est .acctmp & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		CotS.2 & 3.1.2.6.7.2 & Ouvrir le fichier .acctmp & Le fichier contient un timestamp. & \\
+		CoteS.2 & 3.1.2.6.7.2 & Ouvrir le fichier .acctmp & Le fichier contient un timestamp. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		CotS.3 & 3.1.2.6.7.3 & Accéder a un compte dont le temps est écoulé & Le compte doit être supprimé du fichier .acctmp & \\
+		CoteS.3 & 3.1.2.6.7.3 & Accéder a un compte dont le temps est écoulé & Le compte doit être supprimé du fichier .acctmp & \\
 		\cline{1-2}\cline{4-5}
-		CotS.3.1 & 3.1.2.6.7.4 & & Un message indique que le compte temporaire vient d'être supprimé. & \\
+		CoteS.3.1 & 3.1.2.6.7.4 & & Un message indique que le compte temporaire vient d'être supprimé. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		CotS.4 & 3.1.2.6.7.5 & Ouvrir le fichier .acctmp & Les lignes sont de la forme "DateFinEnSeconde|pseudo@motDePasse:/fichier#/autrefichier" & \\
+		CoteS.4 & 3.1.2.6.7.5 & Ouvrir le fichier .acctmp & Les lignes sont de la forme "DateFinEnSeconde|pseudo@motDePasse:/fichier#/autrefichier" & \\
 		\hline
 	\end{tabular}
 	\egroup
