--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -246,11 +246,11 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		ComReC & 1.5.1.1 & Après la connexion du client vers le serveur, lancer la commande "netstat -a -p" sur le terminal du client & Le terminal doit afficher une connexion avec une adresse IP correspondant au serveur, dont le port de connexion doit être 21, l'état doit être à "ESTABLISHED" et le nom ou le PID doit être celui du logiciel.& \\
+		ComReC & 3.1.1.5.1.1 & Après la connexion du client vers le serveur, lancer la commande "netstat -a -p" sur le terminal du client & Le terminal doit afficher une connexion avec une adresse IP correspondant au serveur, dont le port de connexion doit être 21, l'état doit être à "ESTABLISHED" et le nom ou le PID doit être celui du logiciel.& \\
 		\hline
-		ComReC & 1.5.1.2 1.5.1.4 & Après le lancement d'un transfert de fichier, lancer la commande "netstat -a -p" sur le terminal du client & Le terminal doit afficher une connexion avec une adresse IP correspondant au serveur, dont le port de connexion doit être différent de 21 (soit supérieur à 1024, soit égale à 20), l'état doit être à "ESTABLISHED" et le nom ou le PID doit être celui du logiciel. & \\
+		ComReC & 3.1.1.5.1.2 3.1.1.5.1.4 & Après le lancement d'un transfert de fichier, lancer la commande "netstat -a -p" sur le terminal du client & Le terminal doit afficher une connexion avec une adresse IP correspondant au serveur, dont le port de connexion doit être différent de 21 (soit supérieur à 1024, soit égale à 20), l'état doit être à "ESTABLISHED" et le nom ou le PID doit être celui du logiciel. & \\
 		\hline
-		ComReC & 1.5.1.3 & Après le lancement d'un transfert de fichier, lancer la commande "netstat -a" sur le terminal du client & Le terminal ne doit plus afficher une connexion avec une adresse IP correspondant au serveur \textbf{et} dont le port de connexion est 21. &\\
+		ComReC & 3.1.1.5.1.3 & Après le lancement d'un transfert de fichier, lancer la commande "netstat -a" sur le terminal du client & Le terminal ne doit plus afficher une connexion avec une adresse IP correspondant au serveur \textbf{et} dont le port de connexion est 21. &\\
 		\hline
 	\end{tabular}
 	\egroup
@@ -265,24 +265,24 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		ComReC & 1.5.2.1.1.a & Débrancher la machine contenant le logiciel client du réseau, et faire une demande de connexion avec un nom de serveur FTP valide.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$:\linebreak
+		ComReC & 3.1.1.5.2.1.1.a & Débrancher la machine contenant le logiciel client du réseau, et faire une demande de connexion avec un nom de serveur FTP valide.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$:\linebreak
 -Vérifiez l'état de votre connexion Internet.\linebreak
 -Vérifiez que le nom du serveur n'est pas erroné.".&\\
 		\hline
-		ComReC & 1.5.2.1.1.b & Faire une demande de connexion avec un nom de serveur FTP non-valide.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$:\linebreak
+		ComReC & 3.1.1.5.2.1.1.b & Faire une demande de connexion avec un nom de serveur FTP non-valide.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$:\linebreak
 -Vérifiez l'état de votre connexion Internet.\linebreak
 -Vérifiez que le nom du serveur n'est pas erroné.".&\\
 		\hline
-		ComReC & 1.5.2.1.2 & Faire une demande de connexion avec un nom de serveur FTP valide dont le nombre de connexion autorisé par le serveur est atteint.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$: le serveur est surchargé.".&\\
+		ComReC & 3.1.1.5.2.1.2 & Faire une demande de connexion avec un nom de serveur FTP valide dont le nombre de connexion autorisé par le serveur est atteint.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$: le serveur est surchargé.".&\\
 		\hline
-		ComReC & 1.5.2.1.3 & Faire une demande de connexion avec un nom de serveur FTP valide. Le serveur doit avoir auparavant banni le client du test.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une communication avec le serveur $< nom\_du\_serveur>$:
+		ComReC & 3.1.1.5.2.1.3 & Faire une demande de connexion avec un nom de serveur FTP valide. Le serveur doit avoir auparavant banni le client du test.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une communication avec le serveur $< nom\_du\_serveur>$:
 $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
-		ComReC & 1.5.2.2 & Faire une demande de connexion avec un nom de serveur FTP valide. Les regles du pare-feu doit être configurer pour que toutes les connexions sortant vers des ports supérieurs à 1024 ne soient pas autorisées.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$ sur le port $< numero\_du\_port\_echange>$ : Vérifiez vos règle de pare-feu.".&\\
+		ComReC & 3.1.1.5.2.2 & Faire une demande de connexion avec un nom de serveur FTP valide. Les regles du pare-feu doit être configurer pour que toutes les connexions sortant vers des ports supérieurs à 1024 ne soient pas autorisées.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$ sur le port $< numero\_du\_port\_echange>$ : Vérifiez vos règle de pare-feu.".&\\
 		\hline
-		ComReC &1.5.2.3 & Vérifier pour les tests de la section 3.1.1.5 que la fenêtre possede bien un bouton "Fermer" fonctionnel :  cliquer sur ce bouton doit fermer la fenêtre.& Cliquer sur le bouton "Fermer" provoque le fermeture de la fenêtre de dialogue .&\\
+		ComReC & 3.1.1.5.2.3 & Vérifier pour les tests de la section 3.1.1.5 que la fenêtre possede bien un bouton "Fermer" fonctionnel :  cliquer sur ce bouton doit fermer la fenêtre.& Cliquer sur le bouton "Fermer" provoque le fermeture de la fenêtre de dialogue .&\\
 		\hline
-		ComReC & 1.5.2.3 & Vérifier pour les tests de la section 3.1.1.5 que la fenêtre possede bien un bouton "Ré-essayer" fonctionnel :  cliquer sur ce bouton doit ré-itérer l'opération échoué.& Cliquer sur le bouton "Ré-essayer" provoque la ré-itération de l'opération échoué.&\\
+		ComReC & 3.1.1.5.2.3 & Vérifier pour les tests de la section 3.1.1.5 que la fenêtre possede bien un bouton "Ré-essayer" fonctionnel :  cliquer sur ce bouton doit ré-itérer l'opération échoué.& Cliquer sur le bouton "Ré-essayer" provoque la ré-itération de l'opération échoué.&\\
 		\hline
 	\end{tabular}
 	\egroup
@@ -297,6 +297,9 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
+		ComReC & 3.1.1.5.3.1 & Pendant un téléchargement, couper la ligne internet de la machine cliente & Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Connexion interrompue avec le serveur $< nom\_du\_serveur>$.".&\\
+		\hline
+		ComReC & 3.1.1.5.3.2 & Idem que le test 3.1.1.5.2.3. & Idem que le test 3.1.1.5.2.3.\\
 		\hline
 	\end{tabular}
 	\egroup
@@ -311,6 +314,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
+		ComReC & 3.1.1.5.4.1 & Faire un upload, et faire la commande "netstat -a -p" sur le terminal du client. & Le terminal ne doit plus afficher une connexion avec une adresse IP correspondant au serveur.&\\
 		\hline
 	\end{tabular}
 	\egroup
