--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -181,7 +181,7 @@
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		LimiC.1.1.1.2 & 3.1.1.3.2 & Choisir une limite et valider la boite de dialogue. & La vitesse de téléchargement ne dépasse pas la limite fixée. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiC.1.1.2 & 3.1.1.3.8 3.1.1.3.9 & Cliquer sur "Limiter vitesse téléversement". & Une boite de dialogue avec un curseur apparait. & \\
+		LimiC.1.1.2 & 3.1.1.3.8 3.1.1.3.9 & Cliquer sur "Limiter vitesse de téléversement". & Une boite de dialogue avec un curseur apparait. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		LimiC.1.1.2.1 & 3.1.1.3.6 & Choisir une limite et valider la boite de dialogue. & La vitesse de téléversement ne dépasse pas la limite fixée. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -604,7 +604,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		ConoS.1 & 3.1.2.6.6.1 & Ouvrir le dossier contenant les comptes normaux & Vérifier que le fichier à bien pour extension .acc & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		ConoS.2 & 3.1.2.6.6.2 & Ouvrir le fichier .acc & Les lignes sont de la forme "pseudo@motDePasse:/fichier#/autrefichier" & \\
+		ConoS.2 & 3.1.2.6.6.2 & Ouvrir le fichier .acc & Les lignes sont de la forme "pseudo@motDePasse:/fichier\#/autrefichier" & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -626,7 +626,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\cline{4-5}
 		CoteS.3.1 & 3.1.2.6.7.4 & & Un message indique que le compte temporaire vient d'être supprimé. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		CoteS.4 & 3.1.2.6.7.5 & Ouvrir le fichier .acctmp & Les lignes sont de la forme "DateFinEnSeconde|pseudo@motDePasse:/fichier#/autrefichier" & \\
+		CoteS.4 & 3.1.2.6.7.5 & Ouvrir le fichier .acctmp & Les lignes sont de la forme "DateFinEnSeconde|pseudo@motDePasse:/fichier\#/autrefichier" & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -646,7 +646,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\cline{4-5}
 		CobS.3 & 3.1.2.6.8.3 & & Un timestamp est présent dans le fichier. & \\
 		\cline{1-2}\cline{4-5}
-		CobS.4 & 3.1.2.6.8.4 & & Chaque ligne est de la forme "TimestampDeFin|pseudo@motDePasse:/fichier#/autrefichier" & \\
+		CobS.4 & 3.1.2.6.8.4 & & Chaque ligne est de la forme "TimestampDeFin|pseudo@motDePasse:/fichier\#/autrefichier" & \\
 		\cline{1-2}\cline{4-5}
 		CobS.5 & 3.1.2.6.8.5 & & Quand le timestamp actuel est égale au timestamp présent dans le fichier, le compte repasse dans le fichier .acc & \\
 		\hline
@@ -662,45 +662,45 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		LimiS.1 & 3.1.2.7.1 & & & \\
+		LimiS.1 & 3.1.2.7.1 & Ouvrir le programme & Vérifier la présence du menu "Configuration" dans la barre des menus. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.2 & 3.1.2.7.2 & & & \\
+		LimiS.2 & 3.1.2.7.2 & Cliquer sur configuration, puis sur "limiter la vitesse" et mettre en place une limite & Le programme ne télécharge pas plus vite que la vitesse définie. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.3 & 3.1.2.7.3 & & & \\
+		LimiS.3 & 3.1.2.7.3 & Ouvrir le menu déroulant "Configuration" & La liste déroulante contient un bouton "Limiter vitesse de téléchargement" & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.4 & 3.1.2.7.4 & & & \\
+		LimiS.4 & 3.1.2.7.4 & Cliquer sur configuration, puis sur "limiter la vitesse" & Un curseur précis apparait pour régler la vitesse de téléchargement. & \\
+		\cline{1-2}\cline{4-5}
+		LimiS.5 & 3.1.2.7.5 & & Un curseur apparait pour régler la vitesse de téléchargement. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.5 & 3.1.2.7.5 & & & \\
+		LimiS.6 & 3.1.2.7.6 &  & La vitesse de téléchargement de l'utilisateur est limitée. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.6 & 3.1.2.7.6 & & & \\
+		LimiS.7 & 3.1.2.7.7 & Ouvrir le menu déroulant Configuration & Un bouton "Limiter vitesse de téléversement" est présent & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.7 & 3.1.2.7.7 & & & \\
+		LimiS.8 & 3.1.2.7.8 & Cliquer sur "Limiter vitesse de téléversement" & Un curseur apparait. & \\
+		\cline{1-2}\cline{4-5}
+		LimiS.9 & 3.1.2.7.9 & & Le curseur permet de donner une valeur limite. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.8 & 3.1.2.7.8 & & & \\
+		LimiS.10 & 3.1.2.7.10 & Bloquer les téléchargement sur une plage horaire et tester de télécharger un fichier dans cette plage horaire & Les téléchargement sont bloqué sur la plage horaire définie. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.9 & 3.1.2.7.9 & & & \\
+		LimiS.11 & 3.1.2.7.11 & Ouvrir le menu déroulant "Configuration" & Un bouton "Plages horaires téléchargement" est présent. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.10 & 3.1.2.7.10 & & & \\
+		LimiS.12 & 3.1.2.7.12 & Cliquer sur le bouton "Plages horaires téléchargement" & Une liste d’horaires à cocher apparait. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.11 & 3.1.2.7.11 & & & \\
+		\rowcolor{red}LimiS.13 & 3.1.2.7.13 & & & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.12 & 3.1.2.7.12 & & & \\
+		LimiS.14 & 3.1.2.7.14 & Ouvrir le menu "Configuration" & Un bouton "Plage horaire téléversement" est présent dans la liste déroulante. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.13 & 3.1.2.7.13 & & & \\
+		LimiS.15 & 3.1.2.7.15 & Cliquer sur le bouton "Plage horaire téléversement" & Une liste d’horaires à cocher apparait. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.14 & 3.1.2.7.14 & & & \\
+		LimiS.16 & 3.1.2.7.16 & Essayer d'uploader un fichier dont l'extension est interdite ( exemple .exe) & Le programme doit refuser l'upload. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.15 & 3.1.2.7.15 & & & \\
+		LimiS.17 & 3.1.2.7.17 & Cliquer sur le menu "Configuration" & Un bouton "Extensions interdites" est présent dans la liste déroulante. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.16 & 3.1.2.7.16 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.17 & 3.1.2.7.17 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.18 & 3.1.2.7.18 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.19 & 3.1.2.7.19 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.20 & 3.1.2.7.20 & & & \\
+		LimiS.18 & 3.1.2.7.18 & Cliquer sur le bouton "Extensions interdites" & Un champ de saisie apparait. & \\
+		\cline{1-2}\cline{4-5}
+		LimiS.19 & 3.1.2.7.19 & & Le champs est pré-rempli avec les extensions déjà interdite. & \\
+		\cline{1-2}\cline{4-5}
+		LimiS.20 & 3.1.2.7.20 & & Un bouton valide est présent en dessous du champs présent. & \\
 		\hline
 	\end{tabular}
 	\egroup
