Correction multi page

--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -705,7 +705,18 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		LimiS.16 & 3.1.2.7.16 & Essayer d'uploader un fichier dont l'extension est interdite ( exemple .exe) & Le programme doit refuser l'upload. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		LimiS.17 & 3.1.2.7.17 & Cliquer sur le menu "Configuration" & Un bouton "Extensions interdites" est présent dans la liste déroulante. & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+\newpage
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
 		LimiS.18 & 3.1.2.7.18 & Cliquer sur le bouton "Extensions interdites" & Un champ de saisie apparait. & \\
 		\cline{1-2}\cline{4-5}
 		LimiS.19 & 3.1.2.7.19 & & Le champs est pré-rempli avec les extensions déjà interdite. & \\
