--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -181,7 +181,7 @@
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		LimiC.1.1.1.2 & 3.1.1.3.2 & Choisir une limite et valider la boite de dialogue. & La vitesse de téléchargement ne dépasse pas la limite fixée. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiC.1.1.2 & 3.1.1.3.8 3.1.1.3.9 & Cliquer sur "Limiter vitesse téléversement". & Une boite de dialogue avec un curseur apparait. & \\
+		LimiC.1.1.2 & 3.1.1.3.8 3.1.1.3.9 & Cliquer sur "Limiter vitesse de téléversement". & Une boite de dialogue avec un curseur apparait. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		LimiC.1.1.2.1 & 3.1.1.3.6 & Choisir une limite et valider la boite de dialogue. & La vitesse de téléversement ne dépasse pas la limite fixée. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -246,6 +246,11 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
+		ComReC & 3.1.1.5.1.1 & Après la connexion du client vers le serveur, lancer la commande "netstat -a -p" sur le terminal du client & Le terminal doit afficher une connexion avec une adresse IP correspondant au serveur, dont le port de connexion doit être 21, l'état doit être à "ESTABLISHED" et le nom ou le PID doit être celui du logiciel.& \\
+		\hline
+		ComReC & 3.1.1.5.1.2 3.1.1.5.1.4 & Après le lancement d'un transfert de fichier, lancer la commande "netstat -a -p" sur le terminal du client & Le terminal doit afficher une connexion avec une adresse IP correspondant au serveur, dont le port de connexion doit être différent de 21 (soit supérieur à 1024, soit égale à 20), l'état doit être à "ESTABLISHED" et le nom ou le PID doit être celui du logiciel. & \\
+		\hline
+		ComReC & 3.1.1.5.1.3 & Après le lancement d'un transfert de fichier, lancer la commande "netstat -a" sur le terminal du client & Le terminal ne doit plus afficher une connexion avec une adresse IP correspondant au serveur \textbf{et} dont le port de connexion est 21. &\\
 		\hline
 	\end{tabular}
 	\egroup
@@ -260,6 +265,24 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
+		ComReC & 3.1.1.5.2.1.1.a & Débrancher la machine contenant le logiciel client du réseau, et faire une demande de connexion avec un nom de serveur FTP valide.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$:\linebreak
+-Vérifiez l'état de votre connexion Internet.\linebreak
+-Vérifiez que le nom du serveur n'est pas erroné.".&\\
+		\hline
+		ComReC & 3.1.1.5.2.1.1.b & Faire une demande de connexion avec un nom de serveur FTP non-valide.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$:\linebreak
+-Vérifiez l'état de votre connexion Internet.\linebreak
+-Vérifiez que le nom du serveur n'est pas erroné.".&\\
+		\hline
+		ComReC & 3.1.1.5.2.1.2 & Faire une demande de connexion avec un nom de serveur FTP valide dont le nombre de connexion autorisé par le serveur est atteint.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$: le serveur est surchargé.".&\\
+		\hline
+		ComReC & 3.1.1.5.2.1.3 & Faire une demande de connexion avec un nom de serveur FTP valide. Le serveur doit avoir auparavant banni le client du test.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une communication avec le serveur $< nom\_du\_serveur>$:
+$< nom\_du\_serveur>$ vous a banni !".&\\
+		\hline
+		ComReC & 3.1.1.5.2.2 & Faire une demande de connexion avec un nom de serveur FTP valide. Les regles du pare-feu doit être configurer pour que toutes les connexions sortant vers des ports supérieurs à 1024 ne soient pas autorisées.& Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Impossible d'établir une connexion avec le serveur $< nom\_du\_serveur>$ sur le port $< numero\_du\_port\_echange>$ : Vérifiez vos règle de pare-feu.".&\\
+		\hline
+		ComReC & 3.1.1.5.2.3 & Vérifier pour les tests de la section 3.1.1.5 que la fenêtre possede bien un bouton "Fermer" fonctionnel :  cliquer sur ce bouton doit fermer la fenêtre.& Cliquer sur le bouton "Fermer" provoque le fermeture de la fenêtre de dialogue .&\\
+		\hline
+		ComReC & 3.1.1.5.2.3 & Vérifier pour les tests de la section 3.1.1.5 que la fenêtre possede bien un bouton "Ré-essayer" fonctionnel :  cliquer sur ce bouton doit ré-itérer l'opération échoué.& Cliquer sur le bouton "Ré-essayer" provoque la ré-itération de l'opération échoué.&\\
 		\hline
 	\end{tabular}
 	\egroup
@@ -274,6 +297,9 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
+		ComReC & 3.1.1.5.3.1 & Pendant un téléchargement, couper la ligne internet de la machine cliente & Une fenêtre de dialogue doit s'ouvrir avec le message suivant :   "Connexion interrompue avec le serveur $< nom\_du\_serveur>$.".&\\
+		\hline
+		ComReC & 3.1.1.5.3.2 & Idem que le test 3.1.1.5.2.3. & Idem que le test 3.1.1.5.2.3.\\
 		\hline
 	\end{tabular}
 	\egroup
@@ -288,6 +314,7 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
+		ComReC & 3.1.1.5.4.1 & Faire un upload, et faire la commande "netstat -a -p" sur le terminal du client. & Le terminal ne doit plus afficher une connexion avec une adresse IP correspondant au serveur.&\\
 		\hline
 	\end{tabular}
 	\egroup
@@ -586,7 +613,7 @@
 		\hline
 		ConS.1 & 3.1.2.6.6.1 & & & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		ConS.2 & 3.1.2.6.6.2 & & & \\
+		ConoS.2 & 3.1.2.6.6.2 & Ouvrir le fichier .acc & Les lignes sont de la forme "pseudo@motDePasse:/fichier\#/autrefichier" & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -608,7 +635,7 @@
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		CotS.4 & 3.1.2.6.7.4 & & & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		CotS.5 & 3.1.2.6.7.5 & & & \\
+		CoteS.4 & 3.1.2.6.7.5 & Ouvrir le fichier .acctmp & Les lignes sont de la forme "DateFinEnSeconde|pseudo@motDePasse:/fichier\#/autrefichier" & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -624,13 +651,14 @@
 		\hline
 		CobS.1 & 3.1.2.6.8.1 & & & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		CobS.2 & 3.1.2.6.8.2 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		CobS.3 & 3.1.2.6.8.3 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		CobS.4 & 3.1.2.6.8.4 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		CobS.5 & 3.1.2.6.8.5 & & & \\
+
+		CobS.2 & 3.1.2.6.8.2 & Ouvrir le fichier .accban & Chaque ligne contient le motif de bannissemnt. & \\
+		\cline{1-2}\cline{4-5}
+		CobS.3 & 3.1.2.6.8.3 & & Un timestamp est présent dans le fichier. & \\
+		\cline{1-2}\cline{4-5}
+		CobS.4 & 3.1.2.6.8.4 & & Chaque ligne est de la forme "TimestampDeFin|pseudo@motDePasse:/fichier\#/autrefichier" & \\
+		\cline{1-2}\cline{4-5}
+		CobS.5 & 3.1.2.6.8.5 & & Quand le timestamp actuel est égale au timestamp présent dans le fichier, le compte repasse dans le fichier .acc & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -644,45 +672,56 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		LimiS.1 & 3.1.2.7.1 & & & \\
+		LimiS.1 & 3.1.2.7.1 & Ouvrir le programme & Vérifier la présence du menu "Configuration" dans la barre des menus. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.2 & 3.1.2.7.2 & & & \\
+		LimiS.2 & 3.1.2.7.2 & Cliquer sur configuration, puis sur "limiter la vitesse" et mettre en place une limite & Le programme ne télécharge pas plus vite que la vitesse définie. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.3 & 3.1.2.7.3 & & & \\
+		LimiS.3 & 3.1.2.7.3 & Ouvrir le menu déroulant "Configuration" & La liste déroulante contient un bouton "Limiter vitesse de téléchargement" & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.4 & 3.1.2.7.4 & & & \\
+		LimiS.4 & 3.1.2.7.4 & Cliquer sur configuration, puis sur "limiter la vitesse" & Un curseur précis apparait pour régler la vitesse de téléchargement. & \\
+		\cline{1-2}\cline{4-5}
+		LimiS.5 & 3.1.2.7.5 & & Un curseur apparait pour régler la vitesse de téléchargement. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.5 & 3.1.2.7.5 & & & \\
+		LimiS.6 & 3.1.2.7.6 &  & La vitesse de téléchargement de l'utilisateur est limitée. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.6 & 3.1.2.7.6 & & & \\
+		LimiS.7 & 3.1.2.7.7 & Ouvrir le menu déroulant Configuration & Un bouton "Limiter vitesse de téléversement" est présent & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.7 & 3.1.2.7.7 & & & \\
+		LimiS.8 & 3.1.2.7.8 & Cliquer sur "Limiter vitesse de téléversement" & Un curseur apparait. & \\
+		\cline{1-2}\cline{4-5}
+		LimiS.9 & 3.1.2.7.9 & & Le curseur permet de donner une valeur limite. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.8 & 3.1.2.7.8 & & & \\
+		LimiS.10 & 3.1.2.7.10 & Bloquer les téléchargement sur une plage horaire et tester de télécharger un fichier dans cette plage horaire & Les téléchargement sont bloqué sur la plage horaire définie. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.9 & 3.1.2.7.9 & & & \\
+		LimiS.11 & 3.1.2.7.11 & Ouvrir le menu déroulant "Configuration" & Un bouton "Plages horaires téléchargement" est présent. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.10 & 3.1.2.7.10 & & & \\
+		LimiS.12 & 3.1.2.7.12 & Cliquer sur le bouton "Plages horaires téléchargement" & Une liste d’horaires à cocher apparait. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.11 & 3.1.2.7.11 & & & \\
+		\rowcolor{red}LimiS.13 & 3.1.2.7.13 & & & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.12 & 3.1.2.7.12 & & & \\
+		LimiS.14 & 3.1.2.7.14 & Ouvrir le menu "Configuration" & Un bouton "Plage horaire téléversement" est présent dans la liste déroulante. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.13 & 3.1.2.7.13 & & & \\
+		LimiS.15 & 3.1.2.7.15 & Cliquer sur le bouton "Plage horaire téléversement" & Une liste d’horaires à cocher apparait. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.14 & 3.1.2.7.14 & & & \\
+		LimiS.16 & 3.1.2.7.16 & Essayer d'uploader un fichier dont l'extension est interdite ( exemple .exe) & Le programme doit refuser l'upload. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.15 & 3.1.2.7.15 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.16 & 3.1.2.7.16 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.17 & 3.1.2.7.17 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.18 & 3.1.2.7.18 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.19 & 3.1.2.7.19 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.20 & 3.1.2.7.20 & & & \\
+		LimiS.17 & 3.1.2.7.17 & Cliquer sur le menu "Configuration" & Un bouton "Extensions interdites" est présent dans la liste déroulante. & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+\newpage
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		LimiS.18 & 3.1.2.7.18 & Cliquer sur le bouton "Extensions interdites" & Un champ de saisie apparait. & \\
+		\cline{1-2}\cline{4-5}
+		LimiS.19 & 3.1.2.7.19 & & Le champs est pré-rempli avec les extensions déjà interdite. & \\
+		\cline{1-2}\cline{4-5}
+		LimiS.20 & 3.1.2.7.20 & & Un bouton valide est présent en dessous du champs présent. & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -731,6 +770,126 @@
 		UtdoS.17 & 3.1.2.8.17 & & & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		UtdoS.18 & 3.1.2.8.18 & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsection{Communication réseau}
+
+\subsubsection{Procédure d’initialisation de la communication}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		PicoS.1 & 3.1.2.9.1.1 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		PicoS.2 & 3.1.2.9.1.2 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		PicoS.3 & 3.1.2.9.1.3 & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsubsection{Download et Upload}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		DoupS.1 & 3.1.2.10.1 & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsubsection{Module de statistique}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		MostS.1 & 3.1.2.11.1.1 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.2 & 3.1.2.11.1.2 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.3 & 3.1.2.11.1.3 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.4 & 3.1.2.11.1.4 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.5 & 3.1.2.11.1.5 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.6 & 3.1.2.11.1.6 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.7 & 3.1.2.11.1.7 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.8 & 3.1.2.11.1.8 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		MostS.9 & 3.1.2.11.1.9 & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsubsection{Fichier d’historique des événements}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		FhevS.1 & 3.1.2.12.1.1 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		FhevS.2 & 3.1.2.12.1.2 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		FhevS.3 & 3.1.2.12.1.3 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		FhevS.4 & 3.1.2.12.1.4 & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\section{Tests commun aux deux côtés}
+
+\subsection{Cryptage}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		CrypB.1 & 3.1.3.1.1 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.2 & 3.1.3.1.2 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.3 & 3.1.3.1.3 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.4 & 3.1.3.1.4 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.5 & 3.1.3.1.5 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.6 & 3.1.3.1.6 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.7 & 3.1.3.1.7 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.8 & 3.1.3.1.8 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.9 & 3.1.3.1.9 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.10 & 3.1.3.1.10 & & & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		CrypB.11 & 3.1.3.1.11 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
