Ajout communication réseau et module statistique

--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -470,7 +470,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 	\egroup
 \end{center}
 
-\subsection{Gestionnaire de comptes utilisateurs}
+
 \subsection{Gestionnaire de comptes utilisateurs}
 \begin{center}
 	\bgroup
@@ -785,11 +785,25 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		PicoS.1 & 3.1.2.9.1.1 & & & \\
+		PicoS.1 & 3.1.2.9.1.1 & Lancer le serveur et pingger le port 21 du serveur. & Le serveur répond. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		PicoS.2 & 3.1.2.9.1.2 & & & \\
+		PicoS.2 & 3.1.2.9.1.2 & Lancer le serveur. & Vérifier que le port utilisé est supérieur a 1024 pour chaque nouveau client. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		PicoS.3 & 3.1.2.9.1.3 & & & \\
+		PicoS.3 & 3.1.2.9.1.3 & Faire une demande au serveur à partir d'un client. & Le programme communique par le port définit. & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsubsection{Procédure de fermeture de la communication Client-Serveur}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		PfccS.1 & 3.1.2.9.2 & Lancer un téléchargement a partir du client et fermer le serveur. & Le téléchargement se coupe. & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -803,7 +817,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		DoupS.1 & 3.1.2.10.1 & & & \\
+		DoupS.1 & 3.1.2.10.1 & Télécharger puis Téléverser un fichier en étant connecté & Le transférer se fait dans les 2 cas. & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -817,23 +831,24 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		MostS.1 & 3.1.2.11.1.1 & & & \\
+		MostS.1 & 3.1.2.11.1.1 & Ouvrir le logiciel et cliquer sur le bouton statistique. & Le programme affiche la fréquence de connexion des utilisateurs. & \\
+		\cline{1-2}\cline{4-5}
+		MostS.2 & 3.1.2.11.1.2 & & Le programme affiche le nombre de téléchargement de chaque fichier. & \\
+		\cline{1-2}\cline{4-5}
+		MostS.3 & 3.1.2.11.1.3 & & Le programme affiche le nombre de téléchargement par utilisateur. & \\
+		\cline{1-2}\cline{4-5}
+		MostS.4 & 3.1.2.11.1.4 & & Le programme affiche le nombre de téléversement effectué par utilisateur. & \\
+		\cline{1-2}\cline{4-5}
+		MostS.5 & 3.1.2.11.1.5 & & Le programme affiche le nombre de téléchargement par tranche de 2 heures. & \\
+		\cline{1-2}\cline{4-5}
+		MostS.6 & 3.1.2.11.1.6 & & Un bouton permet de paramétrer le nombre d'heure entre chaque tranches horaires. & \\
+		\cline{1-2}\cline{4-5}
+		MostS.7 & 3.1.2.11.1.7 & & La programme affiche en temps réel les statistiques suivante : le fichier le plus téléchargé, l'utilisateur qui upload le plus de fichier, l'utilisateur qui télécharge le plus de fichier, un histogramme traçant le nombre de téléchargement de chaque fichier, un histogramme du nombre de fichier téléchargé et téléversé par utilisateur, un histogramme du nombre moyen de téléchargement et téléversement par tranche de 2 heures. & \\
+		\cline{1-2}\cline{4-5}
+		MostS.7.1 & 3.1.2.11.1.7 & & Toutes les 2 semaines un rapport contient les informations listé ci-dessus. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		MostS.2 & 3.1.2.11.1.2 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		MostS.3 & 3.1.2.11.1.3 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		MostS.4 & 3.1.2.11.1.4 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		MostS.5 & 3.1.2.11.1.5 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		MostS.6 & 3.1.2.11.1.6 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		MostS.7 & 3.1.2.11.1.7 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		MostS.8 & 3.1.2.11.1.8 & & & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		MostS.9 & 3.1.2.11.1.9 & & & \\
+		MostS.8 & 3.1.2.11.1.8 & Ouvrir le logiciel & Un bouton "Temps réel" est présent et génère un fichier. & \\
+		MostS.9 & 3.1.2.11.1.9 & & Le fichier généré aura comme format .html & \\
 		\hline
 	\end{tabular}
 	\egroup
