--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -125,13 +125,28 @@
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		AuthC.1.2 & 3.1.1.1.1.6 3.1.1.1.1.7 3.1.1.1.1.8 &  & sur le pop-up, le titre "Authentification" apparait centré et est au dessus d'une barre horizontale. & \\
 		\cline{1-2}\cline{4-5}
-		AuthC.1.3 & 3.1.1.1.1.9 3.1.1.1.1.10 & & Les mots "Serveur", "Nom d'utilisateur" et "Mot de passe" sont affichés, chacun suivit d'un champ de saisie de texte. & \\
+		AuthC.1.3 & 3.1.1.1.1.9 3.1.1.1.1.10 3.1.1.1.2.3 3.1.1.1.2.4 & & Les mots "Serveur", "Nom d'utilisateur" et "Mot de passe" sont affichés, chacun suivit d'un champ de saisie de texte. & \\
 		\cline{1-2}\cline{4-5}
 		AuthC.1.4 & 3.1.1.1.1.11 & & Un bouton "Se connecter" est affiché centré en bas du pop-up & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		AuthC.1.4.1 & 3.1.1.1.1.11 & Remplir incorrectement un ou plusieurs champs de saisie puis cliquer sur le bouton "Se connecter" (à effectuer avec plusieurs combinaison de champs incorrects). & Le(s) champ(s) incorrect(s) possède(nt) une bordure rouge. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.1.4.2 & 3.1.1.1.2.1 & Remplir correctement les champs, puis cliquer sur "Se connecter". & Le programme se connecte au serveur avec l'identifiant donné. & \\
+		AuthC.1.4.2 & 3.1.1.1.2.1 3.1.1.1.2.5 3.1.1.1.2.6 & Remplir correctement les champs, puis cliquer sur "Se connecter". & Le programme se connecte au serveur avec l'identifiant donné. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		AuthC.1.4.2.1 & 3.1.1.1.2.7 & & Le message "Bonjour [pseudo]" apparait dans la barre de menu. & \\
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		\hline
+		\rowcolor{red} AuthC. & 3.1.1.1.2.2 & 
 		\hline
 	\end{tabular}
 	\egroup
